--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -2,8 +2,8 @@ name: Trello-GCal Sync
 
 on:
   schedule:
-    - cron: "0 6 * * *" # 毎日UTC 21:00（日本時間6:00）に実行
-  workflow_dispatch: # 手動実行も可能
+    - cron: "0 6 * * *" # 毎日日本時間15:00に実行
+  workflow_dispatch:
 
 jobs:
   sync:
@@ -18,13 +18,13 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install --upgrade pip
+          pip install google-api-python-client google-auth requests
 
       - name: Run sync
         env:
+          SERVICE_ACCOUNT_JSON: ${{ secrets.SERVICE_ACCOUNT_JSON }}
           TRELLO_API_KEY: ${{ secrets.TRELLO_API_KEY }}
           TRELLO_TOKEN: ${{ secrets.TRELLO_TOKEN }}
           GOOGLE_CALENDAR_ID: ${{ secrets.GOOGLE_CALENDAR_ID }}
-          GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
         run: python main.py
